# studium

./: .gitignore  README.md  package-lock.json  package.json  readme.md  tailwind.config.js  vue.config.js  webnotes.db
docs/: CHANGELOG.md  README.md
public/: browser-extension.html
public/_locales/en/: messages.json
source/: background.js  manifest.json  options.html
source/popup/: choose_note.css  choose_note.html
src/: background.js  manifest.json
src-api/: .env.example  backend.dockerfile  couchdb.dockerfile  docker-compose.yml  local.ini  pyproject.toml
src-api/app/: README.md  main.py
src-api/app/core/: config.py  jwt.py  models.py  security.py
src-api/app/studium/core/: datacontroller.py  jwt.py  models.py  security.py
src-ext/: .gitignore  package-lock.json  package.json  tailwind.config.js  vue.config.js
src-ext/src/: manifest.json
src-ext/src/devtools/: App.vue
src-ext/src/override/: App.vue
src-ext/src/sidebar/: App.vue
src-net/: package-lock.json  package.json
src-net/src/: main.js
src-net/src/router/: index.js
src-net/src/store/: side-menu.js
src-web/: index.html  package-lock.json  package.json  tailwind.config.js
src-web/public/: index.html
src-web/src/: App.vue  main.js
src-web/src/components/: HelloWorld.vue
src-web/src/router/: index.js
src-web/src/store/: index.js
src-web/src/utils/: core.js  utils.js
src-web/src/views/: About.vue  Home.vue  Login.vue  Overview.vue  Register.vue
src/components/: HelloWorld.vue
src/override/: App.vue  main.js
src/standalone/: App.vue
(+26 files in other folders)
