[tool.poetry]
name = "src-api"
version = "0.1.0"
description = "api for studium"
authors = ["jerlendds <jerlends_0x0@protonmail.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
SQLAlchemy = "^1.4.8"
uvicorn = {extras = ["standard"], version = "^0.13.4"}
python-multipart = "^0.0.5"
python-jose = "^3.2.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pydantic = "^1.8.1"
sentry-sdk = "^1.0.0"
cloudant = "^2.14.0"
requests = "^2.25.1"
email-validator = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
